<resources>
    <string name="app_name">Online Shop App (Group Project)</string>
    <string name="intro_title">Step into your style <font color="#6033ba"> style\n A world of shoes</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast, free shipping</string>
    <string name="intro_signin">Already have an account?<font color="#6033ba"> Sign In</font> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="product_title">Product Title</string>
    <string name="create_new_account">Create new Account</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="user_name">User Name</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="user_email">User Email</string>
    <string name="logout">Logouy</string>
    <string name="confirm">Comfirm</string>
    <string name="upload_image">Upload Profile Image</string>
    <string name="home">Home</string>
    <string name="profile">"Profile"</string>
    <string name="profile_image">"Profile Image "</string>
    <string name="edit">Edit</string>
    <string name="add_item">Add Product</string>
    <string name="collection">Collection</string>
    <string name="no_data">No data</string>
    <string name="e_g_kg">KG</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="location">Location</string>
    <string name="product_name">Product Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add_product">Add Product</string>
    <string name="select_category">Please Select a category</string>
    <string name="see_all">See All</string>
    <string name="recommendation">Recommendation</string>
    <string name="total_tax">Total Tax</string>
    <string name="money_logo">RM</string>
    <string name="total">Total</string>
    <string name="fee_delivery">Fee Delivery</string>
    <string name="subtotal">Subtotal</string>
    <string name="cart">Cart</string>
    <string name="check_out">Check Out</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_image">Product Image</string>
    <string name="username">UserName</string>
    <string name="user_address">UserAddress</string>
    <string name="user_phone">UserPhone</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="hint">**********</string>
    <string name="please_confirm_your_password">Please Confirm Your Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="creating_your_account">Creating Your Account</string>
    <string name="loading">Loading</string>
    <string name="zero">RM 0.0</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="update">Updating</string>
    <string name="all_product">All Product</string>
    <string name="go_to_home_page"><![CDATA[Go To Home Page ->]]></string>
    <string name="click_to_upload">Click to Upload</string>
    <string name="product_price">Product Price</string>
    <string name="product_store">Product Store</string>
    <string name="product_features">Product Features</string>
    <string name="left">Left</string>
    <string name="rm">RM</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="processing">Processing</string>
    <string name="creating_account">Creating Account</string>
    <string name="your_order_is_empty">Your Order is Empty</string>
    <string name="order">Order</string>
    <string name="total_price_rm">Total Price: RM</string>
    <string name="total_quantity">Total Quantity:</string>
    <string name="create_new_product">Add New</string>
    <string name="productinfo">ProductInfo</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="hint_x">***********</string>
    <string name="dont_have_an_account_sign_up_now">Dont have an account? sign up now</string>
    <string name="creating">Creating...</string>
    <string name="no_order_yet">\n No have any order data</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="verifying">Verifying</string>
    <string name="_012_3456789">012-3456789</string>
    <string name="full_name">Full Name</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="date">Date:</string>
    <string name="_12_12_2012">12/12/2012</string>
    <string name="order_id">"Order ID: "</string>
    <string name="rm_00">RM 00</string>
    <string name="total_quantity_00">Total Quantity: 00</string>
    <string name="dashboard">Dashboard</string>
</resources>