<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="profileViewModel"
            type="com.example.onlineshop.ui.viewModel.user.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.user.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!--            <ImageView-->
            <!--                android:id="@+id/btnAdmin"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:src="@drawable/ic_admin_panel"-->
            <!--                android:layout_margin="20sp"-->
            <!--                android:contentDescription="@string/admin_panel" />-->

            <ImageView
                android:id="@+id/btnLogOut"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logout"
                android:layout_margin="20sp"
                android:contentDescription="@string/logout" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/bg_skyblue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:id="@+id/ivProfileImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_person"
                        android:contentDescription="@string/profile_image"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/loading_overlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="50dp"
                            android:layout_marginBottom="30dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ProgressBar
                                android:layout_width="35sp"
                                android:layout_height="35sp"
                                android:indeterminateTint="@color/black" />

                            <TextView
                                android:id="@+id/tvLoadingText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:text="@string/update"
                                android:textColor="@color/black"
                                android:textSize="10sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUploadProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/upload_image" />

                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCurrentUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:layout_marginTop="5sp"
                        android:text="@string/user_name"/>

                    <TextView
                        android:id="@+id/tvCurrentUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_marginTop="15sp"
                        android:text="@string/user_email"/>

                    <TextView
                        android:id="@+id/tvCurrentUserPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginTop="15sp"
                        android:text="@string/user_phone"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>