<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="product"
            type="com.example.onlineshop.data.modal.Product" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:background="#2ADADADA"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvProductName"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@{product.productName}"
                    android:hint="@string/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvProductInfo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:text="hukama modles"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rm"
                        android:layout_marginEnd="6dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="00"
                        android:text="@{product.productPrice}"
                        android:textColor="#FB8C00"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:backgroundTint="@color/blue"
                    android:layout_gravity="center"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>